Спринт 6/16 → Тема 1/2: Финальный проект спринта: подписки на авторов → Урок 3/12. Добавил иллюстрации к постам

--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block title %}
 {{ group }}
 {% endblock title %}
@@ -18,6 +19,9 @@
             </li>
             <li>Дата публикации: {{ post.pub_date|date:"d E Y" }}</li>
           </ul>
+          {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+            <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+          {% endthumbnail %}
           <p>{{ post.text|linebreaksbr }}</p>
           <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a>
         </article>
