--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -36,7 +36,7 @@
                     </div>
                   {% endfor %}
               {% endif %}      
-              <form method="post" action="{% if is_edit %}
+              <form method="post" enctype="multipart/form-data" action="{% if is_edit %}
                 {% url 'posts:post_edit' post.pk %}
               {% else %}
                 {% url 'posts:post_create' %}
