--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block title %}Последние обновления на сайте{% endblock %}
 {% block content %}
   <main>
@@ -10,6 +11,9 @@
             <a href=" {% url 'posts:profile' post.author.username %}"> все посты пользователя</a></li>
           <li>Дата публикации: {{ post.pub_date|date:"d E Y" }}</li>
         </ul>
+        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+          <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+        {% endthumbnail %}
         <p>{{ post.text|linebreaksbr }}</p>
         <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a>
       </article>
