--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load thumbnail %}
 {% block title %}
   Пост {{ post.text|truncatechars:30 }}
 {% endblock title %}
@@ -12,7 +13,7 @@
         <li class="list-group-item">Дата публикации: {{ post.pub_date|date:"d E Y" }}</li>
         {% if post.group %}
           <li class="list-group-item">
-            Группа: {{ post.group }}
+            Группа: {{ post.group }}<br>
             <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
           </li>
         {% endif %}
@@ -29,6 +30,9 @@
       </ul>
     </aside>
     <article class="col-12 col-md-9">
+      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+        <img class="card-img my-2" src="{{ im.url }}">
+      {% endthumbnail %}
       <p>{{ post.text|linebreaksbr }}</p>
       {% if request.user == post.author %}
       <a class="btn btn-primary" href="{% url 'posts:post_edit' post.id %}">
