--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load thumbnail %}
 {% block title %}
   {{ author.get_full_name }} Профайл пользователя
 {% endblock title %}
@@ -12,6 +13,9 @@
       <ul>
         <li>Дата публикации: {{ post.pub_date|date:"d E Y" }}</li>
       </ul>
+      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+          <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+      {% endthumbnail %}
       <p>{{ post.text|linebreaksbr }}</p>
       <a href="{% url 'posts:post_detail' post.id %}">подробная информация</a>
     </article>
