Спринт 6/16 → Тема 1/2: Финальный проект спринта: подписки на авторов → Урок 4/12. Добавлены комментарии с тестами

--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -39,6 +39,7 @@
         редактировать запись
       </a>
       {% endif %}
+      {% include 'posts/includes/comment.html' %}
     </article>
   </div>
 </div>
