Спринт 6/16 → Тема 1/2: Финальный проект спринта: подписки на авторов → Урок 5/12. Refactoring #1

--- a/yatube/templates/users/password_reset_done.html
+++ b/yatube/templates/users/password_reset_done.html
@@ -1,1 +1,8 @@
-Пароль сброшен
+{% extends "base.html" %}
+{% block title %}Пароль сброшен{% endblock %}
+
+{% block content %}
+  {% with card_header='Настройки' card_body='Пароль сброшен' %}
+    {% include 'users/includes/card.html' %} 
+  {% endwith %}
+{% endblock %} 
