--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -10,7 +10,7 @@
   <div class="row">
     <aside class="col-12 col-md-3">
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Дата публикации: {{ post.pub_date|date:"d E Y" }}</li>
+        <li class="list-group-item">Дата публикации: {{ post.created|date:"d E Y" }}</li>
         {% if post.group %}
           <li class="list-group-item">
             Группа: {{ post.group }}<br>
