--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -11,7 +11,7 @@
   {% for post in page_obj %}
     <article>
       <ul>
-        <li>Дата публикации: {{ post.pub_date|date:"d E Y" }}</li>
+        <li>Дата публикации: {{ post.created|date:"d E Y" }}</li>
       </ul>
       {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
           <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
