--- a/yatube/templates/users/password_change_done.html
+++ b/yatube/templates/users/password_change_done.html
@@ -1,1 +1,9 @@
-Пароль изменен
+
+{% extends "base.html" %}
+{% block title %}Пароль изменен{% endblock %}
+
+{% block content %}
+  {% with card_header='Настройки' card_body='Пароль изменен' %}
+    {% include 'users/includes/card.html' %} 
+  {% endwith %}
+{% endblock %} 
