--- a/yatube/templates/core/404.html
+++ b/yatube/templates/core/404.html
@@ -1,3 +1,5 @@
+{% load cache %}
+{% cache 600 error404 %}
 {% extends "base.html" %}
 {% block title %}Custom 404{% endblock %}
 {% block content %}
@@ -5,3 +7,4 @@
   <p>Страницы с адресом {{ path }} не существует</p>
   <a href="{% url 'posts:index' %}">Идите на главную</a>
 {% endblock %} 
+{% endcache %}
