--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,22 +1,12 @@
 {% extends 'base.html' %}
+{% load cache %}
 {% load thumbnail %}
 {% block title %}Последние обновления на сайте{% endblock %}
 {% block content %}
   <main>
     <div class="container py-5">
       {% for post in page_obj %}
-      <article>
-        <ul>
-          <li>Автор: {{ post.author.get_full_name }} 
-            <a href=" {% url 'posts:profile' post.author.username %}"> все посты пользователя</a></li>
-          <li>Дата публикации: {{ post.created|date:"d E Y" }}</li>
-        </ul>
-        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-          <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
-        {% endthumbnail %}
-        <p>{{ post.text|linebreaksbr }}</p>
-        <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a>
-      </article>
+      {% include 'posts/includes/post_list.html' %}
       {% if post.group %}
           <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы {{ post.group }}</a>
         {% endif %}
