--- a/yatube/templates/posts/includes/post_list.html
+++ b/yatube/templates/posts/includes/post_list.html
@@ -1,9 +1,20 @@
 {% load thumbnail %}
 <article>
     <ul>
-      <li>Автор: {{ post.author.get_full_name }} 
-        <a href=" {% url 'posts:profile' post.author.username %}"> все посты пользователя</a></li>
-      <li>Дата публикации: {{ post.created|date:"d E Y" }}</li>
+      <li>
+        Автор:
+        <a href="{% url 'posts:profile' post.author.username %}">
+          {{ post.author.get_full_name }}
+        </a>
+      </li>
+      <li>
+        Дата публикации: {{ post.created|date:"d E Y" }}
+      </li>
+      {% if post.group %}
+      <li>
+          <a href="{% url 'posts:group_list' post.group.slug %}">#{{ post.group }}</a>
+      </li>
+      {% endif %}
     </ul>
     {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
       <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
