--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,15 +1,13 @@
 {% extends 'base.html' %}
-{% load cache %}
 {% load thumbnail %}
 {% block title %}Последние обновления на сайте{% endblock %}
 {% block content %}
   <main>
     <div class="container py-5">
+      <h1>Последние посты</h1>
+      {% include 'posts/includes/switcher.html' %}
       {% for post in page_obj %}
       {% include 'posts/includes/post_list.html' %}
-      {% if post.group %}
-          <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы {{ post.group }}</a>
-        {% endif %}
       {% if not forloop.last %}<hr>{% endif %}
       {% endfor %}
       {% include 'posts/includes/paginator.html' %}
